--- a/djangoproject/gestion_stock/templates/setting.html
+++ b/djangoproject/gestion_stock/templates/setting.html
@@ -97,7 +97,7 @@
         $('label').eq(10).text("B.L Entree");
         $('label').eq(11).text("Colis").append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
         $('label').eq(12).text("L.V entree");
-
+        $('label').eq(13).text("U.M sortie");
     });
 </script>
 {% endblock %}
