--- a/djangoproject/gestion_stock/templates/bonCommandeSortieadd.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeSortieadd.html
@@ -221,6 +221,9 @@
                     </div>
                 </div>
             </div>
+            <form>
+                <input>
+            </form>
         </div>
     </div>
 </div>
@@ -230,7 +233,7 @@
         <div class="col">
             <div class="border shadow-lg p-2 mb-3 bg-white rounded">
                 <div class="col">
-                    <h5 class="text-center"> <u> Lignes du BL</u></h5>
+                    <h5 class="text-center"> <u> Lignes du BC</u></h5>
                     <div class="container">
                         <div class="row">
                             <div class="container">
