--- a/djangoproject/gestion_stock/templates/bonCommandeSortie.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeSortie.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="form-group row text-center">
         <div class="col">
-            <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
+            <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark" disabled>Tout</button>
         </div>
         <!--<div class="col">
             <form method="post" novalidate enctype="multipart/form-data"  style="text-align: left;font-weight:bold;">
@@ -42,7 +42,7 @@
         </form>-->
         </div>
         <div class="col">
-            <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
+            <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark" disabled>Ajouter</button>
         </div>
     </div>
 </div>
