liaison des ble avec les ume,
csv presque finis, reste les lignes des bcs,
pour les liaisons bl ume reste a géré la création

--- a/djangoproject/gestion_stock/templates/base_generic.html
+++ b/djangoproject/gestion_stock/templates/base_generic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <header>
-  {% block title %}<title>Generic Page</title>{% endblock %}
+  {% block title %}<title>Salut, {{user}}</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="csrf_token" content="{{ csrf_token }}">
