--- a/djangoproject/gestion_stock/templates/bonCommandeSortie.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeSortie.html
@@ -70,7 +70,6 @@
                         <tr>
                             <td> <button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>
                             <td> {{ items.fk_Destinataire.fk_TypeDestinataire.nom }} </td>
-                            <td> {{ items.fk_Destinataire.nom }} </td>
                             <td> {{ items.fk_Destinataire.codeUM }} </td>
                             <td> {{ items.dateCommande }} </td>
                             <td> {{ items.numeroCommande }} </td>
@@ -105,7 +104,7 @@
     $(document).ready(function () {
         $('#dtBasicExample').DataTable();
         $('.dataTables_length').addClass('bs-select');
-        $('#umentree').fadeTo("slow", 0.5);
+        $('#boncommandesortie').fadeTo("slow", 0.5);
     });
 
     $("#create-row").click(function() {
@@ -117,13 +116,13 @@
         var name = "";
         var trueid = 0;
         alert(idClicked);
-        "{% for items in ume %}"
-        if ('{{ items.idUniteManutentionEntree }}' == idClicked) {
+        "{% for items in bcs %}"
+        if ('{{ items.idbonCommandeSortie }}' == idClicked) {
             name = '{{ items.nom }}';
             trueid = '{{ items.id }}';
         }
         "{% endfor %}"
-        window.location.href = "{% url 'unitemanutentionentreemodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
+        window.location.href = "{% url 'bonCommandeSortiemodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
     });
 
     $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
@@ -131,7 +130,7 @@
         alert(idClicked);
         $.ajax({
             type:"POST",    //type de requête utilisé par ajax
-            url:"/delete_ume/", //lien de la view qui gère la requête post pour supprimer une entree
+            url:"/delete_bon_sortie/", //lien de la view qui gère la requête post pour supprimer une entree
             data: {
                 'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
                 'id': idClicked, // id du transporteur acquis grace a une incrementation en js
