Type destinataire ok, type article
Ne reste plus qu'a géré les type article,
puis finir les lignes des bcs

--- a/djangoproject/gestion_stock/templates/setting.html
+++ b/djangoproject/gestion_stock/templates/setting.html
@@ -86,6 +86,12 @@
         $('#createzone').click(function () {
             window.location.href = "{% url 'zonedepot' %}"
         });
+        $('#createtypedes').click(function () {
+            window.location.href = "{% url 'typedest' %}"
+        });
+        $('#createtypeart').click(function () {
+            window.location.href = "{% url 'typeart' %}"
+        });
         $('#createtypefournisseur').tooltip();
         $('#createuserbtn').tooltip();
         $('#createzone').tooltip();
