--- a/djangoproject/gestion_stock/templates/Zone_depot.html
+++ b/djangoproject/gestion_stock/templates/Zone_depot.html
@@ -17,6 +17,15 @@
             </div>
         {% endif %}
     {% endfor %}
+        {% if id == '0' %}
+        <div class="col">
+            <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
+        </div>
+        {% endif %}
+        <div class="col">
+            <button type="button" id="genview" class="btn btn-success btn-rounded btn-outline-dark">Vue générale</button>
+        </div>
+
     </div>
 </div>
 
@@ -24,38 +33,147 @@
     <div class="row">
         <div class="col">
             <div class="border shadow-lg p-3 mb-5 bg-white rounded">
+                {% if vuegen == "ok" %}
+                {% if id %}
+                <div class="w-75 mx-auto"> <!-- si aucun type zone est select (clients) , Dans cette page je fais tout dans le même template
+                            comme ça vous avez toutes les manières de dev avec django que ce soit avec des templates spécifique a une action
+                            ou un template capable de faire plusieurs actions en un seul template "intelligent"-->
+                    <br>
+                    <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
+                        <label for="idznedepot">ID : </label>
+                        <input type="text" class="form-control w-25 mt-n2 ml-4" placeholder="ID" aria-label="identifiant" aria-describedby="basic-addon1"  disabled id="idznedepot">
+                    </div>
+                    <br>
+                    <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
+                        <label for="selectcliinput">client : &nbsp;</label>
+                        <select class="custom-select mt-n2" id="selectcliinput">
+                            <option value="---">------------------------------------------------------------------------------------------------------</option>
+                            {% for items in cli %}
+                            <option value="{{ items.idClient }}">{{ items.nom }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
+                        <label for="namezdepot">nom : &nbsp;</label>
+                        <input type="text" class="form-control w-50 mt-n2" placeholder="XX-XX" aria-label="nom" id="namezdepot">
+                    </div>
+                    <br>
+                    <div class="input-group-append w-75 mx-auto">
+                        <button class="btn-outline-unique mx-auto" type="button" id="savenewzone">Sauvegarder</button>
+                    </div>
+                </div>
+
+                {% else %}
+                <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                    <thead>
+                    <tr>
+                        <th scope="col" class="th-sm"> modify </th>
+                        <th scope="col" class="th-sm"> Client </th>
+                        <th scope="col" class="th-sm"> nom </th>
+                        <th scope="col" class="th-sm"> delete </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for itemsz in zoned %}
+                    <tr>
+                        <td> <button id='{{ itemsz.idZoneDepot }}' class="dyna"> -> </button></td>
+                        {% if itemsz.fk_TypeZoneDepot == None %}
+                            <td> ---/--- </td>
+                        {% else %}
+                            <td> {{ itemsz.fk_TypeZoneDepot.nom }} </td>
+                        {% endif %}
+                        <td> {{ itemsz.nom }} </td>
+                        <td> <button id='{{ itemsz.idZoneDepot }}' class="dynad"> X </button> </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                    <tfoot>
+                    <tr>
+                        <th> modify
+                        </th>
+                        <th>nom
+                        </th>
+                        <th>delete
+                        </th>
+                    </tr>
+                    </tfoot>
+                </table>
+                {% endif %}
+                {% else %}
+
                 {% if id %}
                     {% for items in cli %}
-                        {% if id == '0' %}
+
+                        {% if id == "0" %}
+
+                        {% if creation == 'ok' %}
                             <div class="w-75 mx-auto"> <!-- si aucun type zone est select (clients) , Dans cette page je fais tout dans le même template
                             comme ça vous avez toutes les manières de dev avec django que ce soit avec des templates spécifique a une action
                             ou un template capable de faire plusieurs actions en un seul template "intelligent"-->
-                                <br>
-                                <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
-                                    <label for="idznedepot">ID : </label>
-                                    <input type="text" class="form-control w-25 mt-n2 ml-4" placeholder="ID" aria-label="identifiant" aria-describedby="basic-addon1"  disabled id="idznedepot">
-                                </div>
-                                <br>
-                                <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
-                                    <label for="selectcliinput">client : &nbsp;</label>
-                                    <select class="custom-select mt-n2" id="selectcliinput">
-                                        <option value="---">------------------------------------------------------------------------------------------------------</option>
-                                        {% for items in cli %}
-                                        <option value="{{ items.idClient }}">{{ items.nom }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                                <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
-                                    <label for="namezdepot">nom : &nbsp;</label>
-                                    <input type="text" class="form-control w-50 mt-n2" placeholder="XX-XX" aria-label="nom" id="namezdepot">
-                                </div>
-                                <br>
-                                <div class="input-group-append w-75 mx-auto">
-                                    <button class="btn-outline-unique mx-auto" type="button" id="savenewzone">Sauvegarder</button>
-                                </div>
+                            <br>
+                            <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
+                                <label for="idznedepot">ID : </label>
+                                <input type="text" class="form-control w-25 mt-n2 ml-4" placeholder="ID" aria-label="identifiant" aria-describedby="basic-addon1"  disabled id="idznedepot">
                             </div>
+                            <br>
+                            <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
+                                <label for="selectcliinput">client : &nbsp;</label>
+                                <select class="custom-select mt-n2" id="selectcliinput">
+                                    <option value="---">------------------------------------------------------------------------------------------------------</option>
+                                    {% for items in cli %}
+                                    <option value="{{ items.idClient }}">{{ items.nom }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="input-default-wrapper w-75 mx-auto"> <!-- si aucun type zone est select (clients) -->
+                                <label for="namezdepot">nom : &nbsp;</label>
+                                <input type="text" class="form-control w-50 mt-n2" placeholder="XX-XX" aria-label="nom" id="namezdepot">
+                            </div>
+                            <br>
+                            <div class="input-group-append w-75 mx-auto">
+                                <button class="btn-outline-unique mx-auto" type="button" id="savenewzone">Sauvegarder</button>
+                            </div>
+                        </div>
+
+                        {% else %}
+                            <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                            <thead>
+                            <tr>
+                                <th scope="col" class="th-sm"> modify </th>
+                                <th scope="col" class="th-sm"> nom </th>
+                                <th scope="col" class="th-sm"> delete </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                        {% for items in zoned %}
+                            {% if items.fk_TypeZoneDepot == None %}
+                                <tr>
+                                    <td> <button id='{{ items.idZoneDepot }}' class="dyna"> -> </button></td>
+                                    <td> {{ items.nom }} </td>
+                                    <td> <button id='{{ items.idZoneDepot }}' class="dynad"> X </button> </td>
+                                </tr>
+                            {% else %}
                         {% endif %}
+                    {% endfor %}
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <th> modify
+                            </th>
+                            <th>nom
+                            </th>
+                            <th>delete
+                            </th>
+                        </tr>
+                        </tfoot>
+                        </table>
+                        {% endif %}
+                    {% endif %}
+
+                    {% if id == '0' %}
+                    {% else %}
                         {% if creation == 'ok' %}
+
                         <div class="w-75 mx-auto">
                             <br>
                             <div class="input-default-wrapper w-75 mx-auto">
@@ -81,8 +199,8 @@
                                 <button class="btn-outline-unique mx-auto" type="button" id="savenewzone">Sauvegarder</button>
                             </div>
                         </div>
-
                         {% else %}
+
                         {% if id == items.idClient %}
                             <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                                 <thead>
@@ -93,12 +211,14 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for items in zoned %}
-                                    <tr>
-                                        <td> <button id='{{ items.idZoneDepot }}' class="dyna"> -> </button></td>
-                                        <td> {{ items.nom }} </td>
-                                        <td> <button id='{{ items.idZoneDepot }}' class="dynad"> X </button> </td>
-                                    </tr>
+                                    {% for itemsz in zoned %}
+                                        {% if itemsz.fk_TypeZoneDepot.nom == items.nom  %}
+                                        <tr>
+                                            <td> <button id='{{ itemsz.idZoneDepot }}' class="dyna"> -> </button></td>
+                                            <td> {{ itemsz.nom }} </td>
+                                            <td> <button id='{{ itemsz.idZoneDepot }}' class="dynad"> X </button> </td>
+                                        </tr>
+                                        {% endif %}
                                     {% endfor %}
                                 </tbody>
                                 <tfoot>
@@ -113,7 +233,10 @@
                                 </tfoot>
                             </table>
                         {% endif %}
+
                 {% endif %}
+                {% endif %}
+
                 {% endfor %}
                 {% else %}
                 <h6 class="text-center">Veuillez choisir le type de zone(client) que vous voulez</h6>
@@ -129,6 +252,7 @@
                     </div>
                 </div>
                 {% endif %}
+                {% endif %}
 
             </div>
         </div>
@@ -141,18 +265,6 @@
         $('.dataTables_length').addClass('bs-select');
         //$('#transporteurs').fadeTo("slow", 0.5);
 
-        var upperid = "0";
-        "{% for items in zoned %}"
-            if (parseInt(upperid, 10) < parseInt('{{ items.idZoneDepot }}', 10)) {
-                upperid = parseInt('{{ items.idZoneDepot }}', 10);
-            }
-        "{% endfor %}"
-        console.log($("#umid").val() + " gg");
-        if (upperid == 0)
-            $("#idznedepot").val(1);
-        else
-            $("#idznedepot").val(upperid + 1);
-
         '{% if creation == "ok" %}'
             '{% for items in cli %}'
                 '{% if items.idClient == id %}'
@@ -161,6 +273,36 @@
             '{% endfor %}'
         '{% endif %}'
     });
+
+    '{% if vuegen == "ok" %}'
+        '{% if id %}'
+            '{% for items in zoned %}'
+                '{% if items.idZoneDepot == id %}'
+                    $("#idznedepot").val('{{ items.idZoneDepot }}');
+                    '{% if items.fk_TypeZoneDepot %}'
+                        $("#selectcliinput").val('{{ items.fk_TypeZoneDepot.idClient }}');
+                    '{% else %}'
+                        $("#selectcliinput").val('---');
+                    '{% endif %}'
+                    $("#namezdepot").val('{{ items.nom }}');
+                    console.log("found");
+                '{% endif %}'
+            '{% endfor %}'
+        '{% endif %}'
+    '{% else %}'
+    var upperid = "0";
+    "{% for items in zoned %}"
+    if (parseInt(upperid, 10) < parseInt('{{ items.idZoneDepot }}', 10)) {
+        upperid = parseInt('{{ items.idZoneDepot }}', 10);
+    }
+    "{% endfor %}"
+    console.log($("#umid").val() + " gg");
+    if (upperid == 0)
+        $("#idznedepot").val(1);
+    else
+        $("#idznedepot").val(upperid + 1);
+    '{% endif %}'
+
     $('#savenewzone').click(function () {
         console.log("1 - " + $('#idznedepot').val() + " 2 - " + $('#selectcliinput').val() + " 3 - " + $('#namezdepot').val());
         $.ajax({
@@ -197,11 +339,17 @@
                 window.location.href = "{% url 'zonedepot' %}?id={{ items.idClient }}"+ "&" + "creation=ok" ;
             '{% endif %}'
         '{% endfor %}'
+        '{% if id == "0" %}'
+            window.location.href = "{% url 'zonedepot' %}?id=0"+ "&" + "creation=ok" ;
+        '{% endif %}'
+        console.log("{{id}}");
+    });
+    $('#genview').click(function () {
+        window.location.href = "{% url 'zonedepot' %}?vuegen=" + "ok" ;
     });
     $("#back-row").click(function() {
         window.location.href = "{% url 'zonedepot' %}";
     });
-
     $(document).on("click", "button.dyna" , function(e) {
         var idClicked = e.target.id;
         var name = "";
@@ -213,16 +361,15 @@
             trueid = '{{ items.id }}';
         }
         "{% endfor %}"
-        //window.location.href = "{% url 'transporteurmodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
+        window.location.href = "{% url 'zonedepot' %}?id=" + idClicked + "&" + "vuegen=ok" ;
     });
-
     //code pour delete
     $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
         var idClicked = e.target.id;
         alert(idClicked);
         $.ajax({
             type:"POST",    //type de requête utilisé par ajax
-            url:"/delete_zone/", //lien de la view qui gère la requête post pour supprimer une entree
+            url:"/zone_depot/delete_zone/", //lien de la view qui gère la requête post pour supprimer une entree
             data: {
                 'name': $('#nom').val(), // nom récuperer dans le input #nom
                 'id': idClicked, //
