--- a/djangoproject/gestion_stock/templates/bonCommandeSortiemodify.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeSortiemodify.html
@@ -197,20 +197,37 @@
                     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
                         <tr>
-                            <th scope="col" class="th-sm"> modify </th>
-                            <th scope="col" class="th-sm"> dossier </th>
-                            <th scope="col" class="th-sm"> code UM </th>
-                            <th scope="col" class="th-sm"> date </th>
-                            <th scope="col" class="th-sm"> numéro commande </th>
-                            <th scope="col" class="th-sm"> identifiant </th>
-                            <th scope="col" class="th-sm"> terminé </th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th colspan="2">qte attribuée<br>par le système</th>
+                        </tr>
+                        <tr>
+                            <!--<th scope="col" class="th-sm"> modify </th>-->
+                            <th scope="col" class="th-sm"> code client </th>
+                            <th scope="col" class="th-sm"> désignation </th>
+                            <th scope="col" class="th-sm"> qte commandée </th>
+                            <th scope="col" class="th-sm"> qte colis </th>
+                            <th scope="col" class="th-sm"> qte attribuée </th>
+                            <th scope="col" class="th-sm"> <-diff-> </th>
+                            <th scope="col" class="th-sm"> prod. </th>
+                            <th scope="col" class="th-sm"> colis </th>
+                            <th scope="col" class="th-sm"> <-diff-> </th>
+                            <th scope="col" class="th-sm"> prod. </th>
+                            <th scope="col" class="th-sm"> colis </th>
+                            <th scope="col" class="th-sm"> priorité </th>
+                            <th scope="col" class="th-sm"> terminée </th>
                             <th scope="col" class="th-sm"> delete </th>
+                            <th scope="col" class="th-sm"> ID.Ligne bcs </th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for items in lbcs %}
                         <tr>
-                            <td> <button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>
+                            <!--<td> <button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>-->
                             <td> {{ items.fk_Destinataire.fk_TypeDestinataire.nom }} </td>
                             <td> {{ items.fk_Destinataire.codeUM }} </td>
                             <td> {{ items.dateCommande }} </td>
@@ -255,7 +272,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for items in lbcs %}
+                        {% for items in lblvs %}
                         <tr>
                             <td> <button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>
                             <td> {{ items.fk_Destinataire.fk_TypeDestinataire.nom }} </td>
