--- a/djangoproject/gestion_stock/templates/clientmodify.html
+++ b/djangoproject/gestion_stock/templates/clientmodify.html
@@ -167,19 +167,25 @@
                 <div class="col-12 col-md-auto border shadow-lg p-3 mb-5 bg-white rounded ml-2">
                     Bons de commande sortie
                     <div class="table-responsive">
-
                         <table id="dtBasicExample1" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                             <thead>
                             <tr>
                                 <th scope="col" class="th-sm text-center"> modify </th>
                                 <th scope="col" class="th-sm text-center"> nom </th>
+                                <th scope="col" class="th-sm text-center"> del </th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                            </tr>
+                            {% for items in bcs %}
+                                {% if items.fk_Client.id == id %}
+                                    <tr>
+                                        <td></td> <td></td><td><button class="deleteur">X</button></td>
+                                    <!--console.log("entree");
+                                    <td></td>
+                                    <td></td>-->
+                                    </tr>
+                                {% endif %}
+                            {% endfor %}
                             </tbody>
                         </table>
 
@@ -516,8 +522,8 @@
 
         '{% for items in bcs %}'
         console.log("entree");
-        $('#dtBasicExample1')
-            .append('<tr><td><td contenteditable=\'true\'></td><td><button class="deleteur">X</button></td></tr>');
+        //$('#dtBasicExample1')
+            //.append('<tr><td><td contenteditable=\'true\'></td><td><button class="deleteur">X</button></td></tr>');
         '{% endfor %}'
 
         '{% for items in odt %}'
