--- a/djangoproject/gestion_stock/templates/unitemanutentionentree.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentree.html
@@ -41,11 +41,11 @@
                         {% for items in ume %}
                         <tr>
                             <td> <button type="button" id='{{ items.idUniteManutentionEntree }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>
-                            <td> {{ items.fk_ZoneDepot.nom }} </td>
-                            <td> {{ items.fk_TypeZoneDepot.nom }} </td>
+                            <td> {{ items.fk_BonLivraisonEntree.fk_ZoneDepot_pour_TypeZoneDepot }} </td>
+                            <td> {{ items.fk_BonLivraisonEntree.fk_ZoneDepot_pour_TypeZoneDepot.fk_TypeZoneDepot.nom }} </td>
                             <td> {{ items.fk_BonLivraisonEntree.numeroBonLivraison }} </td>
                             <td> {{ items.c_horodatage }} </td>
-                            <td> {{ items.dateReception }} </td>
+                            <td> {{ items.fk_BonLivraisonEntree.dateReception }} </td>
                             <td> {{ items.idUniteManutentionEntree }} </td>
                             <td> {{ items.stock }} </td>
                             <td> <button id='{{ items.idUniteManutentionEntree }}' class="dynad btn btn-sm btn-outline-grey rounded-pill"> <i class="fa fa-minus"></i>   </button> </td>
