--- a/djangoproject/gestion_stock/templates/unitemanutentionsortie.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionsortie.html
@@ -23,17 +23,21 @@
         <div class="col">
             <div class="border shadow-lg p-3 mb-5 bg-white rounded">
                 <div class="table-responsive">
-                    <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                    <table id="dtBasicExample" class="table table-striped table-bordered table-sm text-center" cellspacing="0" width="100%">
                         <thead>
                         <tr>
                             <th scope="col" class="th-sm"> modify </th>
-                            <th scope="col" class="th-sm"> emplacement </th>
-                            <th scope="col" class="th-sm"> type zone </th>
-                            <th scope="col" class="th-sm"> n° BL </th>
-                            <th scope="col" class="th-sm"> date création </th>
-                            <th scope="col" class="th-sm"> date réception </th>
-                            <th scope="col" class="th-sm"> identifiant </th>
-                            <th scope="col" class="th-sm"> stock </th>
+                            <th scope="col" class="th-sm"> destinataire </th>
+                            <th scope="col" class="th-sm"> code </th>
+                            <th scope="col" class="th-sm"> numéro </th>
+                            <th scope="col" class="th-sm"> date ouverture </th>
+                            <th scope="col" class="th-sm"> date fermeture </th>
+                            <th scope="col" class="th-sm"> date expédition </th>
+                            <th scope="col" class="th-sm"> brute </th>
+                            <th scope="col" class="th-sm"> net </th>
+                            <th scope="col" class="th-sm"> diff </th>
+                            <th scope="col" class="th-sm"> Etiquette </th>
+                            <th scope="col" class="th-sm"> Colissage </th>
                             <th scope="col" class="th-sm"> delete </th>
                         </tr>
                         </thead>
@@ -41,13 +45,17 @@
                         {% for items in ums %}
                         <tr>
                             <td> <button type="button" id='{{ items.idUniteManutentionSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>
-                            <td> {{ items.fk_ZoneDepot.nom }} </td>
-                            <td> {{ items.fk_TypeZoneDepot.nom }} </td>
-                            <td> {{ items.fk_BonLivraisonSortie.numeroBonLivraison }} </td>
-                            <td> {{ items.c_horodatage }} </td>
-                            <td> {{ items.dateReception }} </td>
-                            <td> {{ items.idUniteManutentionSortie }} </td>
-                            <td> {{ items.stock }} </td>
+                            <td> {{ items.fk_BonCommandeSortie.fk_Destinataire.nom }} </td>
+                            <td> {{ items.fk_BonCommandeSortie.fk_Destinataire.codeUM }} </td>
+                            <td> {{ items.numero }} </td>
+                            <td> {{ items.dateOuverture }} </td>
+                            <td> {{ items.dateFermeture }} </td>
+                            <td> {{ items.dateExpedition }} </td>
+                            <td> {{ items.poidsBrut }} </td>
+                            <td> {{ items.poidsTare }} </td>
+                            <td> {{ items.poidsDifference }} </td>
+                            <td> <button id='{{ items.idUniteManutentionSortie }}' class="etiquet btn btn-sm btn-outline-blue-grey rounded-pill"> <i class="fa fa-print"></i></button></td>
+                            <td> <button id='{{ items.idUniteManutentionSortie }}' class="colisage btn btn-sm btn-outline-blue-grey rounded-pill"> <i class="fa fa-print"></i></button></td>
                             <td> <button id='{{ items.idUniteManutentionSortie }}' class="dynad btn btn-sm btn-outline-grey rounded-pill"> <i class="fa fa-minus"></i>   </button> </td>
                         </tr>
                         {% endfor %}
@@ -55,13 +63,17 @@
                         <tfoot>
                         <tr>
                             <th>modify </th>
-                            <th>emplacement </th>
-                            <th>type zone </th>
-                            <th>n° BL </th>
-                            <th>date création </th>
-                            <th>date réception </th>
-                            <th>identifiant </th>
-                            <th>stock </th>
+                            <th>destinataire </th>
+                            <th>code </th>
+                            <th>numéro </th>
+                            <th>date ouverture </th>
+                            <th>date fermeture </th>
+                            <th>date expédition </th>
+                            <th>brute </th>
+                            <th>net </th>
+                            <th>diff </th>
+                            <th>Etiquette </th>
+                            <th>Colissage </th>
                             <th>delete </th>
                         </tr>
                         </tfoot>
